[package]
name = "desugar"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/desuagar/0.1.0"
license = "APACHE-2.0"
description = "Allow for Desugaring of various Rust constructs"
homepage = "https://github.com/muppi090909/desugar/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }

[lib]
proc-macro = true
